--- a/src/style.css
+++ b/src/style.css
@@ -156,7 +156,8 @@ button:focus {
 
 .logo {
   height: 1.4em !important;
-  width: 2.5em !important;
+  width: 1.4em !important;
+  border-radius: 50px;
 }
 
 .navbar-nav .nav-link {
